// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all cards test LoadingCard card should match the snapshot 1`] = `
<div>
  <div
    className="movie-title"
  >
    Loading...
  </div>
</div>
`;

exports[`all cards test Logo card should match the snapshot 1`] = `
<div
  className="sw-logo"
/>
`;

exports[`all cards test empty card should match the snapshot 1`] = `
<div>
  <div
    className="movie-title"
  />
  <div
    className="movie-data-empty"
  />
</div>
`;

exports[`all cards test movie card should match the snapshot 1`] = `
Object {
  "children": Array [
    <Logo />,
    <div
      className="movie-title"
    >
      test title
    </div>,
    <div
      className="movie-data"
    >
      <div
        className="animation"
      >
        this is a crawl
      </div>
    </div>,
    <div
      className="movie-data-bottom"
    >
      <div>
        Director: 
        BB-8
         
      </div>
      <div>
        1/1/1970
         
      </div>
    </div>,
  ],
}
`;

exports[`all cards test movie card should match the snapshot 2`] = `
<div>
  <Logo />
  <div
    className="movie-title"
  >
    test title
  </div>
  <div
    className="movie-data"
  >
    <div
      className="animation"
    >
      this is a crawl
    </div>
  </div>
  <div
    className="movie-data-bottom"
  >
    <div>
      Director: 
      BB-8
       
    </div>
    <div>
      1/1/1970
       
    </div>
  </div>
</div>
`;

exports[`all cards test movie card should match the snapshot of the children with props 1`] = `
Object {
  "children": Array [
    <Logo />,
    <div
      className="movie-title"
    >
      test title
    </div>,
    <div
      className="movie-data"
    >
      <div
        className="animation"
      >
        this is a crawl
      </div>
    </div>,
    <div
      className="movie-data-bottom"
    >
      <div>
        Director: 
        BB-8
         
      </div>
      <div>
        1/1/1970
         
      </div>
    </div>,
  ],
}
`;
